// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge appends the color modifier class 1`] = `
<blaze-badge
  class="hydrated"
  type="brand"
>
  <span
    class="c-text c-badge c-badge--brand"
  >
    <!---->
    brand
  </span>
</blaze-badge>
`;

exports[`Badge handles boolean ghost and boolean rounded 1`] = `
<blaze-badge
  class="hydrated"
  ghost=""
  rounded=""
>
  <span
    class="c-text c-badge c-badge--rounded c-badge--ghost"
  >
    <!---->
    default
  </span>
</blaze-badge>
`;

exports[`Badge handles boolean rounded attribute 1`] = `
<blaze-badge
  class="hydrated"
  rounded=""
>
  <span
    class="c-text c-badge c-badge--rounded"
  >
    <!---->
    default
  </span>
</blaze-badge>
`;

exports[`Badge handles both boolean rounded attribute and type 1`] = `
<blaze-badge
  class="hydrated"
  rounded=""
  type="brand"
>
  <span
    class="c-text c-badge c-badge--brand c-badge--rounded"
  >
    <!---->
    brand
  </span>
</blaze-badge>
`;

exports[`Badge renders correctly with no props 1`] = `
<blaze-badge
  class="hydrated"
>
  <span
    class="c-text c-badge"
  >
    <!---->
    default
  </span>
</blaze-badge>
`;

exports[`Badge supports all the modifiers 1`] = `
<blaze-badge
  class="hydrated"
  ghost=""
  rounded=""
  type="brand"
>
  <span
    class="c-text c-badge c-badge--brand c-badge--rounded c-badge--ghost"
  >
    <!---->
    brand
  </span>
</blaze-badge>
`;
